/*
 * Copyright © 2017-2020 factcast.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.factcast.client.grpc.cli.cmd;

import org.factcast.client.grpc.cli.conv.ExistingJsonFile;
import org.factcast.client.grpc.cli.util.Command;
import org.factcast.client.grpc.cli.util.FactRenderer;
import org.factcast.client.grpc.cli.util.Options;
import org.factcast.core.Fact;
import org.factcast.core.FactCast;

import com.beust.jcommander.Parameter;
import com.beust.jcommander.Parameters;

@Parameters(commandDescription = "publish a fact", commandNames = "publish")
public class Publish implements Command {

    @Parameter(
            names = { "--header",
                    "-h" },
            required = true,
            description = "Filename of an existing json file to read the header from")
    ExistingJsonFile headerFile;

    @Parameter(
            names = { "--payload",
                    "-p" },
            required = true,
            description = "Filename of an existing json file to read the payload from")
    ExistingJsonFile payloadFile;

    @Override
    public void runWith(FactCast fc, Options opt) {
        FactRenderer factRenderer = new FactRenderer(opt);
        Fact f = Fact.of(headerFile.read(), payloadFile.read());
        fc.publish(f);
        System.out.println("Published:");
        System.out.println(factRenderer.render(f));
    }
}
