@startuml

title __CMD's Class Diagram__\n

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.Catchup {
          ~ from : UUID
          ~ ns : String
          + Catchup()
          + Catchup()
          + runWith()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.EnumerateNamespaces {
          + runWith()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.EnumerateTypes {
          ~ ns : String
          + runWith()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.Follow {
          ~ from : UUID
          ~ fromNow : boolean
          ~ ns : String
          + runWith()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.Publish {
          + runWith()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.SerialOf {
          ~ ids : List<UUID>
          + runWith()
      }
    }
  }
  

  org.factcast.client.grpc.cli.cmd.Catchup .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.EnumerateNamespaces .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.EnumerateTypes .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.Follow .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.Publish .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.Publish o-- org.factcast.client.grpc.cli.conv.ExistingJsonFile : headerFile
  org.factcast.client.grpc.cli.cmd.Publish o-- org.factcast.client.grpc.cli.conv.ExistingJsonFile : payloadFile
  org.factcast.client.grpc.cli.cmd.SerialOf .up.|> org.factcast.client.grpc.cli.util.Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
